# Monarch-IA

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Monarch AI.docx  README.md  README.pt-BR.md  ROADMAP.md  ROADMAP_V2.md  ROADMAP_V3.md  config.py  docker-compose.yml  main.py  monark IA(falta fazer).txt  opencode.json  pyproject.toml  setup.cfg
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/workflows/: ci.yml
agents/: architecture.py  base.py  deploy.py  devils_advocate.py  discovery.py  documentation.py  implementer.py  observability.py  planning.py  prioritization.py  reviewer.py  security.py  testing.py
apps/: README.md
apps/achadinhos/: Dockerfile  Makefile  README.md  catalog.json  requirements.txt
apps/canal-dark/: Dockerfile  Makefile  README.md  requirements.txt
apps/instagram-automation/: Dockerfile  Makefile  README.md  queue.json
apps/monarch-core/: .env.example  (+2 more)
apps/pdf-factory/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
apps/pdf-factory/pdf_factory/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py  render.py
apps/pdf-factory/templates/: dark.html  minimal.html  pro.html  sales.html
apps/pdf-factory/tests/: test_models.py  test_pipeline.py  test_render.py
core/: circuit_breaker.py  monarch_core_client.py  orchestrator.py  task.py
deploy/: README.md
docs/: active-incubations.md  ai-operator-context.md  ecosystem-execution-plan.md  instagram-automation-approval-flow.md  master-project-roadmap.md  next-session-checkpoint.md  whatsapp-assessor-product.md
infra/: README.md
interfaces/: cli.py  telegram_bot.py
scripts/: deploy.sh  init_letsencrypt.sh  renew_letsencrypt.sh
storage/: database.py  models.py
tests/: conftest.py
tools/: code_tools.py  fs_tools.py  github_tools.py
whatsapp_notion_bot/: .env.example  Dockerfile  README.md  __init__.py  main.py  notion_client.py
(+191 files in other folders)
