[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-factory"
version = "0.1.0"
description = "Generate professional PDFs from briefs"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "weasyprint>=60.0",
    "markdown>=3.5.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
]

[project.scripts]
pdf-factory = "pdf_factory.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_factory*"]